@@ -5,6 +5,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.25  2004/08/23 10:37:31  jimmyo
+# Fixed bug in munin-graph when choosing colours (Deb#267185).
+#
 # Revision 1.24  2004/08/18 15:32:20  jimmyo
 # Applied patch from Matthieu Lochegnies to munin-graph, and fixed the same problem elsewhere in the code (Deb#250982, SF#924561).
 #
@@ -899,9 +902,9 @@ sub process_node {
 
 		push (@rrd_negatives, ($node->{client}->{$service}->{$negfield.".draw"} || "LINE2") .
 		    ":ng$negfield" . 
-		    ((defined $single_value and $single_value) ? $single_colour : $COLOUR[$col_count-1%@COLOUR]));
+		    ((defined $single_value and $single_value) ? $single_colour : $COLOUR[($col_count-1)%@COLOUR]));
 		push (@rrd_negatives, "HRULE:".$node->{client}->{$service}->{"$negfield.warn"}.
-		    ((defined $single_value and $single_value) ? "#ff0000" : $COLOUR[$col_count-1%@COLOUR]))
+		    ((defined $single_value and $single_value) ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]))
 		    if $node->{client}->{$service}->{"$negfield.warn"};
 		# Special case - renamed field
 
@@ -936,7 +939,7 @@ sub process_node {
 	    }
 
 
-	    push (@rrd, "HRULE:".$node->{client}->{$service}->{"$field.warn"}.($single_value ? "#ff0000" : $COLOUR[$col_count-1%@COLOUR]))
+	    push (@rrd, "HRULE:".$node->{client}->{$service}->{"$field.warn"}.($single_value ? "#ff0000" : $COLOUR[($col_count-1)%@COLOUR]))
 		if $node->{client}->{$service}->{"$field.warn"};
 	}
 
